@@ -84,6 +84,7 @@
 61. Use LibVLC by default for MPD HTTP stream playback on Linux.
 62. Default to Qt5 builds.
 63. Fix copying songs to devices - incorrect number of bytes were transferred.
+64. Only use MTP device with BUSNUM and DEVNUM properties.
 
 1.5.2
 -----
